--- a/try/JAVA/servlet/j.html
+++ b/try/JAVA/servlet/j.html
@@ -1,8 +1,8 @@
 <html>
     <title>
-        Get Your Ass Back Fool!
+        CityÊý¾Ý¿â
     </title>
     <body>
-        <h1>Please get out of my way, name</h1>
+        
     </body>
 </html>
