--- a/try/JAVA/servlet/pushDeer.html
+++ b/try/JAVA/servlet/pushDeer.html
@@ -5,9 +5,11 @@
         </title>
     </head>
     <body>
-        <form action="https://api2.pushdeer.com/message/push" method="GET">
-            <input type="text" value="https://api2.pushdeer.com/message/push?pushkey=%20PDU2524TD9q37WmTnU0ZMI7X4EEG8BEdj6TbCaKh">
-            <input type="submit" name="text"><>
+        <form action="https://api2.pushdeer.com/message/push" method="GET" target="iframe">
+            <input type="hidden" name="pushkey" value="PDU2524TD9q37WmTnU0ZMI7X4EEG8BEdj6TbCaKh">
+            <input type="text" name="text">
+            <input type="submit" value="·¢ËÍ">
         </form>
+        <iframe src="" frameborder="0" name="iframe" style="display:none"></iframe>
     </body>
 </htmL>
