--- a/try/JAVA/servlet/j.html
+++ b/try/JAVA/servlet/j.html
@@ -1,8 +1,9 @@
 <html>
     <title>
-        City数据库
+        response
     </title>
     <body>
-        
+        请求方法是GET
+        请求参数name为
     </body>
 </html>
